# MRdataset

./: .buildinfo  .codespellrc  .coveragerc  .flake8  .gitattributes  .gitignore  .travis.yml  API.html  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  MRdataset.html  MRdataset.tests.html  Makefile  README.rst  authors.html  cmd2pkg  conf.py  config.html  contributing.html  genindex.html  history.html  index.html  installation.html  installation.rst  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  update-gh-pages.sh  usage.html  (+2 more)
.github/: ISSUE_TEMPLATE.md
.github/workflows/: continuos-integration.yml  continuous-integration.yml  draft-pdf.yml
MRdataset/: MRdataset.py  __init__.py  __mrdataset__.py  _version.py  base.py  bids.py  bids_dataset.py  bids_utils.py  cli.py  common.py  common_dicom.py  config.py  core.py  dicom.py  dicom_dataset.py  dicom_utils.py  experiment.py  fastbids.py  fastbids_dataset.py  log.py  logger.py  naive_bids.py  simulate.py  utils.py  xnat.py  xnat_dataset.py
MRdataset/core/: basemrdataset.py
MRdataset/data/: __init__.py  base.py  config.py  xnat_dataset.py
MRdataset/experimental/: DicomNode.py  Node.py  SessionNode.py  SubjectNode.py  dcm_parser.py  delta.py  dicom_node.py  node.py  session_node.py  subject_node.py  tags.py
MRdataset/modules/: localdataset.py  xnatdataset.py
MRdataset/modules/resources/: 165639.json  bold_metadata.json  bold_params.json
MRdataset/resources/: mri-config.json
MRdataset/tests/: .coveragerc  __init__.py  config.py  conftest.py  new_classes_mrdataset.py  simulate.py  test_MRdataset.py  test_base.py  test_bids.py  test_cli.py  test_common.py  test_dicom.py  test_merge.py  test_new_classes_mrdataset.py  test_utils.py
MRdataset/tests/resources/: bids-config.json  mri-config-2.json
MRdataset/utils/: common.py  config.py  functional.py  progress.py
_modules/: index.html
_modules/MRdataset/: base.html  cli.html  common.html  common_dicom.html  config.html  dicom.html  fastbids.html  naive_bids.html  xnat_dataset.html
_modules/MRdataset/tests/: test_MRdataset.html
_sources/: API.rst.txt  MRdataset.rst.txt  config.rst.txt  index.rst.txt  modules.rst.txt  usage.rst.txt
_static/: documentation_options.js
docs/: .gitattributes  API.rst  MRdataset.rst  Makefile  compile_docs.sh  conf.py  config.rst  index.rst  installation.rst  make.bat  modules.rst  usage.ipynb  usage.rst
examples/: examples.ipynb  extract_nifti_header.py  mri-config.json  run.sh
joss/: Makefile  paper.bib  paper.jats  paper.md
tests/: test_MRdataset.py
