[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "MRdataset"
dynamic = ["version"]
description = "MRdataset"
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Harsh Sinha", email = "harsh.sinha@pitt.edu" },
    { name = "Pradeep Raamana", email = "raamana@gmail.com" },
]
keywords = [
    "MRdataset",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "dicom2nifti>=2.4.2",
    "nibabel",
    "numpy",
    "protocol",
    "pydicom",
]

[project.scripts]
mrdataset = "MRdataset.cli:cli"
mrds = "MRdataset.cli:cli"
[project.optional-dependencies]
test = [
    "pytest~=7.1.2",
    "hypothesis>=6.97.1",
    "flake8",
    "coverage"
]
[project.urls]
Homepage = "https://github.com/Open-Minds-Lab/MRdataset"
Documentation = "https://open-minds-lab.github.io/MRdataset/"

[tool.hatch.build]
include = [
    "MRdataset/*.py",
    "MRdataset/resources/*",
    "MRdataset/tests/*",
    "MRdataset/tests/resources/*",
]
exclude = [
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "MRdataset/_version.py"


[tool.hatch.build.targets.sdist]
include = [
    "/mrdataset",
]
exclude = [
    "/.github",
    "/docs",
]
